--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<h2 class="section-heading">Motivation behind the Way it is !!</h2>
 					<hr class="light">
-					<p class="text-faded">This website is designed using some of the Latest Technologies like Bootstrap, jQuery and HTML5. 
+					<p class="text-faded">This website is designed using some of the Latest Technologies like Bootstrap, jQuery and HTML5.
 					HTML5 provides many advantages such as Inbuilt Support for Multimedia Components, Access to Geo Location, Client Side Storage using Web SQL database and application cache, among many others.
 					Bootstrap makes this website 100% responsive and highly flexible.</p>
 				</div>
@@ -255,7 +255,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Get My Resume Here</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Resume</a>
+                <a href="https://github.com/vggaur41522/vggaur41522.github.io/blob/master/resume/Resume_GaurV.pdf" class="btn btn-default btn-xl sr-button">Resume</a>
             </div>
         </div>
     </aside>
