--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Get My Resume Here</h2>
-                <a href="https://github.com/vggaur41522/vggaur41522.github.io/blob/master/resume/Resume_GaurV.pdf" class="btn btn-default btn-xl sr-button">Resume</a>
+                <a href="https://github.com/vggaur41522/vggaur41522.github.io/resume/Resume_GaurV.pdf" class="btn btn-default btn-xl sr-button">Resume</a>
             </div>
         </div>
     </aside>
