Changed Resume Link

--- a/index.html
+++ b/index.html
@@ -197,11 +197,28 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<h2 class="section-heading">Motivation behind the Way it is !!</h2>
+					<h2 class="section-heading">Motivation and my Interests</h2>
 					<hr class="light">
-					<p class="text-faded">This website is designed using some of the Latest Technologies like Bootstrap, jQuery and HTML5.
+					<p class="text-faded" >
+					I am crazy for how things look. I feel extracting data is vital but transforming the extracted data into more meaningful information and presenting it in an understandable format is far more critical.
+
+As it is eminent from my resume, I have been professionally working on Front-end Screens development from last 8 years now. It was just my interest which landed me in a team of experts in this field. I have worked in a team (Front-end Reviewer team for Finacle 10.3.x Release) which reviews front-end specific code changes and constantly tries to come up with front-end specific technical amendments to improve a banking user's experience.
+
+Currently I am doing research work with Dr. Paolo Papotti, where we are trying to come up with a Console (Rule Miner) for Data Scientists where they can discover Horn Rules and execute those rules on some positive and negative examples. A user might not be able to understand the rules extracted by the algorithm as it is full of mathematical jargons,  hence we are trying to enhance system capabilities to present extracted Rules in a more English-like statements to improve readability of Complex rules. Presenting data in an efficient and elegant way is of utmost importance. We are using different technologies for doing these tasks like jQuery, Ajax calls, Bootstrap, HTML5 etc
+</p>
+
+<h2 class="section-heading">Reason behind the Way it is !!</h2>
+					<hr class="light">
+					<p class="text-faded" >
+<p>
+
+
+This website is designed using some of the Latest Technologies like Bootstrap, jQuery and HTML5.
 					HTML5 provides many advantages such as Inbuilt Support for Multimedia Components, Access to Geo Location, Client Side Storage using Web SQL database and application cache, among many others.
-					Bootstrap makes this website 100% responsive and highly flexible.</p>
+					Bootstrap makes this website 100% responsive and highly flexible.
+
+
+</p>
 				</div>
 			</div>
 		</div>
@@ -235,6 +252,7 @@
                 </div>
 				<div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
+                    	<a href="https://github.com/vggaur41522">
                         <i class="fa fa-4x fa-github-square text-primary sr-icons"></i>
                         <h3>Varun's Github</h3>
                     </div>
@@ -255,7 +273,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Get My Resume Here</h2>
-                <a href="https://github.com/vggaur41522/vggaur41522.github.io/resume/Resume_GaurV.pdf" class="btn btn-default btn-xl sr-button">Resume</a>
+                <a href="https://drive.google.com/open?id=0BwrGiEhvd0QyWEFreXU5OTlieGs" class="btn btn-default btn-xl sr-button">Resume</a>
             </div>
         </div>
     </aside>
@@ -266,7 +284,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Connect With Me</h2>
                     <hr class="primary">
-                    <p>Liked this website and would like to hire me for your next project? Call me or send an email and I will get in touch with you asap.</p>
+                    <p>Call me or send an email and I will get in touch with you asap.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
